# AlphaInvest

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CODEBASE.md  README.md  STYLE_GUIDE.md  TASKS.md  alpha_report.txt  graph_flow.md  main.py  pyproject.toml  requirements.txt  risk_design_01.md  risk_sector_extraction_architecture.md  test_risk_node.py
.omc/: project-memory.json
.omc/sessions/: f93f0163-c6c9-481d-b330-9941209a387a.json
JS_test/: risk_design_02.md  risk_v01.py  risk_v02.py  risk_v03.py
agent/: __init__.py  state.py  workflow.py
agent/nodes/: __init__.py  alpha.py  macro.py  portfolio.py  report.py  risk.py
agents/: constants.py  state.py  workflow.py
agents/nodes/: alpha.ipynb  alpha.py  cio.py  gp.py  gp_helpers.py  macro.py  portfolio.py  publish.py  risk.py  risk_02.py  risk_v01.py
dashboard/: __init__.py  app.py  data.py  render.py  reporting.py
data/: fetchers.py  mock_data.py
evaluations/: run_eval.py
evaluations/data/: samples.json
evaluations/metrics/: qual.py  quant.py
evaluations/results/: eval_20260325_105044.json  eval_20260325_110358.json  eval_20260325_121331.json  eval_20260325_125159.json  eval_20260325_154922.json  eval_20260326_033933.json  eval_20260326_034919.json  eval_20260326_040132.json  qual_result.json
tests/: test_portfolio.py  test_risk_node.py
utils/: helpers.py  logger.py  macro_data.py  notion_publisher.py  stock_data.py
