[project]
name = "alphainvest"
version = "0.1.0"
description = "AlphaInvest - 맞춤형 주식 리포트 에이전트"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
# Ruff의 기본 줄바꿈 기준(88자) 설정
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# 파이썬 커뮤니티 기본 검사 규칙 (E: pycodestyle, F: pyflakes, I: isort)
select = ["E", "F", "I"]

[tool.ruff.format]
# 따옴표나 들여쓰기 방식도 Black과 동일하게 맞춤
quote-style = "double"
indent-style = "space"
